<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Peso1</string>
    <string name="action_settings">Settings</string>
    <string name="peso_textview">Peso</string>
    <string name="interface_peso_textView">PESo</string>
    <string name="username_edti_toast">Username</string>
    <string name="password_edit_toast">Password</string>
    <string name="email_edit_toast">E-mail</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="login">Login!</string>
    <string name="signup">Sign up!</string>
    <string name="register_button">Sign up</string>
    <string name="register_toast_text">I already have an account.</string>
    <string name="new_here">New here?</string>
    <string name="look_button">Take a look</string>
    <string name="comment_text"> 请在此处编辑评论内容</string>
    <string name="report_button"> 发表</string>
    <string name="click_text"> Login</string>
    <string name="people_info_text"> Yours</string>
    <string name="package_download"> Download</string>
    <string name="favs_text"> Collection</string>
    <string name="message_texts"> 我的信息</string>
    <string name="changeitem"> 切换背景</string>
    <string name="cogs_setting"> Settings</string>
    <string name="logoff_text"> 注销登陆</string>
    <string name="biology">生物 </string>
    <string name="InputComments">Type something...</string>
    <string name="medicine">医学 </string>
    <string name="Physics">物理 </string>
    <string name="computer">计算机 </string>
    <string name="biaoti">标题 </string>
    <string name="search">搜索 </string>
    <string name="recommend_button">Guess You Like</string>
    <string name="desc"></string>
    <string name="mycollection_text">我 的 收 藏</string>
    <string name="all">全部</string>
    <string name="email">Email</string>
    <string name="email_text">Your e\-mail address</string>
    <string name="save">保存</string>
    <string name="textView">TestView</string>
    <string name="mydownloading_text">我 的 下载</string>
    <string name="systemsetting_text">System setting</string>
    <string name="system_message">系 统 消 息</string>
    <string name="aboutus">About</string>
    <string name="check_update">Check for Updates</string>
    <string name="feedback">Feedback</string>
    <string name="use_help">Help</string>
    <string name="personal_save">Save</string>
    <string name="sex">Gender</string>
    <string name="sex_text">male or female</string>
    <string name="birthplace">Birthday</string>
    <string name="school">College</string>
    <string name="school_text">...</string>
    <string name="major">Major</string>
    <string name="major_text">...</string>
    <string name="well">擅长领域</string>
    <string name="head">头像</string>
    <string name="nickname">Username</string>
    <string name="account">账号</string>
    <string name="interest">Areas of interest</string>
    <string name="interest_text">what is your interest...</string>
    <string name="text">此处为正文</string>
    <string name="signature">What\'s up</string>
    <string name="signature_text">Write down your feelings...</string>
    <string name="nickname1"></string>
    <string name="textview">TextView</string>
    <string name="record_pad">Notepad</string>
    <string name="index_text">Home Page</string>
    <string name="message_text">我的信息</string>
    <string name="per_information">个人资料</string>
    <string name="detailsearch">包含精确检索词</string>
    <string name="allsearch">包含全部检索词</string>
    <string name="locationsearch">出现检索词的位置</string>
    <string name="author">作者</string>
    <string name="publishtime">发表时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="inputname">请输入作者的名字</string>

</resources>