<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
   android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0396db"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/sign_arrow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_jiantou" />

        <TextView
            android:id="@+id/signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/signature"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/save_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="15dp"
            android:background="#FF0396db"
            android:text="@string/save"
            android:textSize="15sp" />
    </LinearLayout>

   <EditText
       android:id="@+id/signature1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="25dp" />
    
</LinearLayout>
