<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#0396db" >

        <ImageView
            android:id="@+id/sys_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/systemsetting_text"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/sys_about_us"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:src="@drawable/about_setting" />

        <TextView
            android:id="@+id/aboutus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/aboutus"
            android:textColor="#000000"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sys_checkupdate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:src="@drawable/update_setting" />

        <TextView
            android:id="@+id/ch_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/check_update"
            android:textColor="#000000"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sys_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:src="@drawable/feedback_setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/feedback"
            android:textColor="#000000"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sys_help"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginLeft="18dp"
            android:src="@drawable/help_setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/use_help"
            android:textColor="#000000"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>