<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3" >

        <ImageView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/peso_logo1" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1" >
        <!-- 用户名 -->
        <com.peso.view.LineEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/user"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/username_edti_toast"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textColorLink="#ffffff" />
        <!-- 密码 -->

        <com.peso.view.LineEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/password"
            android:gravity="center"
            android:hint="@string/password_edit_toast"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textColorLink="#ffffff" />
        
        <Button
	        android:id="@+id/login_button"
	        android:layout_width="match_parent"
	        android:layout_height="55dp"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:layout_marginTop="20dip"
	        android:background="@drawable/shapebutton"
	        android:text="@string/login_button"
	        android:textColor="#FFFFFFFF"
	        android:textSize="20sp" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_weight="2.0" >

            <TextView
                android:id="@+id/registr_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right"
                android:text="@string/new_here"
                android:textColor="#FFFFFFFF"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/registr_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="0.5"
                android:text="@string/signup"
                android:textColor="#FFFFFFFF"
                android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
