<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/darken_background">

    <TextView
        android:id="@+id/SearchFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/SearchFor"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edit_all_search"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/SearchFor"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/View1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_all_search"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/in"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinner_ad_search"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_alignParentRight ="true"
            android:layout_toRightOf="@+id/textView3"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/View4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/View1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/author"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_author_name"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/textView4"
            android:ems="10"
            android:hint="@string/inputname"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/View5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/View4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/publishtime"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_year"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/textView5"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/year"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_month"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/edit_year"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/edit_year"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/month"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_below="@+id/View5"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" >

        <Button
            android:id="@+id/btn_advance_search"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/search" />
    </LinearLayout>

</RelativeLayout>